--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,20 @@
             <version>3.5.6-Final</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.hynnet/oracle-driver-ojdbc6 -->
+        <dependency>
+            <groupId>com.hynnet</groupId>
+            <artifactId>oracle-driver-ojdbc6</artifactId>
+            <version>12.1.0.1</version>
+        </dependency>
+
+
     </dependencies>
+    <repositories>
+        <repository>
+            <id>codelds</id>
+            <url>https://code.lds.org/nexus/content/groups/main-repo</url>
+        </repository>
+    </repositories>
 
 </project>
